--- a/resume/kurly/style.css
+++ b/resume/kurly/style.css
@@ -222,6 +222,8 @@ header{
 #img-3-6{ background-image: url(contents/pixel/6.png);}
 #img-3-7{ background-image: url(contents/pixel/7.png);}
 #img-3-8{ background-image: url(contents/pixel/8.png);}
+#img-3-9{ background-image: url(contents/pixel/9.png);}
+
 
 #img-4-1{ background-image: url(contents/wege2/1.png);}
 #img-4-2{ background-image: url(contents/wege2/2.png);}
